for issue #395 long file names covered by search input

--- a/css/app.css
+++ b/css/app.css
@@ -456,7 +456,7 @@ header.search-active .search-navigation-button {
 }
 
 header.search-active #title-filename {
-  margin-left: 190px;
+  margin-left: 245px;
 }
 
 header.hide-controls #window-minimize {
